<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guillemotf.garderie.MainActivity">

    <TextView
        android:text="@string/libelleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/libelleTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btndepart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDepart"
        android:layout_below="@+id/libelleTitle"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnRecap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRecap"
        android:layout_marginEnd="18dp"
        android:layout_below="@+id/libelleTitle"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btnArrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnArrive"
        android:autoText="true"
        android:layout_below="@+id/libelleTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp" />


</RelativeLayout>
